# robodraw

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: pypi-release.yml  tests.yml
docs/: 3d-projections.ipynb  changelog.md  conf.py  elements.ipynb  index.md  installation.md
docs/examples/: full-diagrams.ipynb  logo.ipynb  robodraw-header.ipynb  robodraw-icon.ipynb  robodraw-readme-example.ipynb
robodraw/: __init__.py  schematic.py
tests/: conftest.py  test_drawing_misc.py  test_elements.py  test_projection.py  test_pure_functions.py  test_robodraw.py
