[project]
name = "robodraw"
description = "An ergonomic and programmatic drawing library for python."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{name = "Johnnie Gray", email = "johnniemcgray@gmail.com"}]
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

requires-python = ">= 3.11"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "build",
    "coverage",
    "pytest",
    "pytest-cov",
]
docs = [
    "furo",
    "ipython",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx",
]

[project.urls]
"Documentation" = "https://robodraw.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/robodraw/"
"Issues" = "https://github.com/jcmgray/robodraw/issues"
"Changelog" = "https://github.com/jcmgray/robodraw/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "robodraw/_version.py"

[tool.ruff]
line-length = 79
target-version = "py311"
lint.ignore = ["E741"]

# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
robodraw = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
matplotlib = "*"
numpy = "*"

[tool.pixi.feature.testing.dependencies]
coverage= ">=7.13.5"
pytest= ">=9.0.3"
pytest-cov= ">=7.1.0"

[tool.pixi.feature.testing.pypi-dependencies]
build = ">=1.3.0"

[tool.pixi.feature.docs.dependencies]
astroid = ">=4.1.2"
furo = ">=2025.12.19"
ipython = ">=9.12.0"
myst-nb = ">=1.4.0"
ruff = ">=0.15.10"
setuptools_scm = ">=9.2.2"
sphinx = ">=9.1.0"
sphinx-autoapi = ">=3.8.0"
sphinx-copybutton = ">=0.5.2"
sphinx-design = ">=0.7.0"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = ">=0.7.0"

[tool.pixi.environments]
docs = { features = ["docs"] }
test = { features = ["testing"] }

# ---------------------------------- tasks ---------------------------------- #

[tool.pixi.tasks.pytest]
cmd = "pytest"
cwd = "."
description = "Run pytest."
default-environment = "test"

[tool.pixi.tasks.test]
cmd = """
pytest \
    tests/ \
    --cov=robodraw \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."
description = "Run the test suite."
default-environment = "test"

[tool.pixi.tasks.build-test]
cmd = """
    rm -rf dist/build-test
    && python -m build --sdist --wheel --outdir dist/build-test
"""
cwd = "."
description = "Build source and wheel distributions as a smoke test."
default-environment = "test"

[tool.pixi.feature.docs.tasks.docs]
cmd = "sphinx-build -b html docs docs/_build/html"
cwd = "."
description = "Build the HTML documentation."

[tool.pixi.feature.docs.tasks.readthedocs]
cmd = "sphinx-build -T -b html docs $READTHEDOCS_OUTPUT/html"
cwd = "."
description = "Specific task for building docs on ReadTheDocs."

[tool.pixi.feature.docs.tasks.docs-clean]
cmd = "rm -rf docs/_build"
cwd = "."
description = "Remove documentation build artifacts."

[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "python -m http.server -d docs/_build/html 8000"
cwd = "."
description = "Serve the documentation locally."

[tool.pixi.feature.docs.tasks.lint]
cmd = """
    ruff check --select I
    && ruff format --check
"""
cwd = "."
description = "Check code formatting and imports with ruff."

[tool.pixi.feature.docs.tasks.format]
cmd = """
    ruff check --select I --fix
    && ruff format
"""
cwd = "."
description = "Apply code formatting and fix imports with ruff."

[tool.pixi.feature.docs.tasks.format-all]
cmd = """
    ruff check --select I --fix
    && ruff format
    && find . -name "*.ipynb" -print0 | xargs -0 squeaky
"""
cwd = "."
description = "Format all files including notebooks with squeaky."
